<?xml version="1.0"?>
<package format="2">
  <name>azd_ked_driver</name>
  <version>0.1.0</version>
  <description>AZD-KED driver using SOEM (CLI + ROS node)</description>

  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">Yasuo Hayashibara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS deps used in CMakeLists.txt -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <!-- If you add message/service generation later, add message_generation etc. -->
</package>
